--- a/src/front/js/lang/en-US.json
+++ b/src/front/js/lang/en-US.json
@@ -1,35 +1,46 @@
 {
-    "hero": {
-        "title": "Welcome to",
-        "subtitle": "Family Group.",
-        "description": "Where Every Child Shines Bright! Our Daycare  provides a nurturing and educational environment for children to grow and thrive. We offer a variety of activities designed to stimulate young minds and encourage creativity. Our experienced staff is dedicated to ensuring each child feels safe, happy, and valued. ",
-        "btn": "Enroll Now"
-    },
-    "nav": {
-        "home": "Home",
-        "about": "About",
-        "services": "Services",
-        "contact": "Contact"
-    },
-    "home": {
-        "title": "Welcome to our website",
-        "subtitle": "We are a company that offers the best services in the world",
-        "btn": "Learn more"
-    },
-    "about": {
-        "title": "About us",
-        "subtitle": "We are a company that offers the best services in the world",
-        "btn": "Learn more"
-    },
-    "services": {
-        "title": "Our services",
-        "subtitle": "We are a company that offers the best services in the world",
-        "btn": "Learn more"
-    },
-    "contact": {
-        "title": "Contact us",
-        "subtitle": "We are a company that offers the best services in the world",
-        "btn": "Learn more"
-    }
-
+  "hero": {
+    "title": "Welcome to",
+    "subtitle": "Family Group.",
+    "description": "Where Every Child Shines Bright! Our Daycare  provides a nurturing and educational environment for children to grow and thrive. We offer a variety of activities designed to stimulate young minds and encourage creativity. Our experienced staff is dedicated to ensuring each child feels safe, happy, and valued. ",
+    "btn": "Enroll Now"
+  },
+  "nav": {
+    "home": "Home",
+    "about": "About",
+    "services": "Services",
+    "contact": "Contact"
+  },
+  "home": {
+    "title": "Welcome to our website",
+    "subtitle": "We are a company that offers the best services in the world",
+    "btn": "Learn more"
+  },
+  "about": {
+    "title": "About us",
+    "subtitle": "We are a company that offers the best services in the world",
+    "btn": "Learn more"
+  },
+  "services": {
+    "title": "Our services",
+    "subtitle": "We are a company that offers the best services in the world",
+    "btn": "Learn more"
+  },
+  "contact_us": {
+    "title": "Contact us",
+    "subtitle": "Any questions or comments? Just write us a message!",
+    "title_info_contact": "Contact information",
+    "subtitle_info_contact": "Say something to start a live chat!",
+    "first_name": "first name",
+    "last_name": "last_name",
+    "email": "Email",
+    "phone": "Phone number",
+    "select_subject": "Select Subject?",
+    "opcion1": "General Inquiry",
+    "opcion2": "Technical",
+    "opcion3": "Products",
+    "opcion4": "Commercial Consulting",
+    "mensaje": "Message",
+    "btn": "Send Message"
+  }
 }
